# MotorHandPro

./: .env.example  .env.production  .gitignore  .npmignore  .npmrc.template  AGP_PHYSICS_CLARIFICATION.md  API_INTEGRATION_SUMMARY.md  APL_PROLOG_ARCHITECTURE.md  BENCHMARK.md  BRANCH_CLEANUP_PLAN.md  BREV_DEPLOYMENT.md  BURN_INTEGRATION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_ANALYSIS_REPORT.md  COMPLETE_SETUP_SUMMARY.md  COMPLETE_SIMULATION_REPORT.md  COMPREHENSIVE_OUTPUTS_INVENTORY.md  COMPREHENSIVE_PARAMETER_SWEEP_REPORT.md  COMPREHENSIVE_RUN_REPORT.md  CONTRIBUTING.md  CUBESAT_PROPOSAL.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DIGITAL_TWIN_SUMMARY.md  Dockerfile  Dockerfile.gpu  EASIEST_START.md  EMPIRICAL_CONSTANTS_DATABASE.md  EONET_INTEGRATION.md  Ec_clean.csv  FULL_REPOSITORY_EXECUTION_REPORT.md  GRAVITY_VALIDATION_REPORT.md  HARDWARE_VALIDATION_ROADMAP.md  INTEGRATION_SUMMARY.md  ISSUES_FIXED_AND_ALL_SIMULATIONS_REPORT.md  LAM_APPLICATION_INTEGRATION.md  LAM_IMPLEMENTATION.md  LAM_PHASE2.md  (+171 more)
analysis/: README.md  heatmap_fit.py  lambda_fit.csv  validation_report.json
analysis_results/: 12p_rpo_analysis.json  3i_atlas_rpo_analysis.json  ensemble_results.json  mu_optimization.csv  optimization_log.txt  threshold_optimization.csv
api/: README.md  requirements.txt  server.py  test_integration.py
api_integrations/: .env.example  README.md  __init__.py  base_client.py  config.py  manager.py  requirements.txt
apl/: README.md
biomedical_simulation/: INSTALLATION.md  README.md  biomedical_framework.d  build.sh  dub.json
(+2410 files in other folders)
